--- a/style.css
+++ b/style.css
@@ -117,6 +117,17 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 3rem;
     animation: blink 0.7s infinite;
 }
+#typing-text {
+    display: inline; /* Ini kunci biar lebarnya ngikutin panjang teks doang */
+    border-right: 3px solid #9eff00; /* Ini kursornya */
+    padding-right: 5px;
+    animation: blink 0.7s infinite;
+}
+
+@keyframes blink {
+    0%, 100% { border-color: transparent; }
+    50% { border-color: #9eff00; }
+}
 
 /* --- 4. ABOUT & SERVICES (NEON STYLE) --- */
 .about-img-container {
@@ -522,4 +533,5 @@ footer i:hover {
     section { padding: 50px 0 !important; }
 
 }
+
 
