--- a/style.css
+++ b/style.css
@@ -60,6 +60,8 @@ h1, h2, h3, h4, h5, h6 {
     background: transparent !important;
     border: none !important;
     padding-top: 20px;
+        padding-right: 25px;
+        padding-left: 25px;
 }
 
 .navbar.scrolled {
@@ -533,6 +535,7 @@ footer i:hover {
     section { padding: 50px 0 !important; }
 
 }
+
 
 
 
