--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -587,7 +587,7 @@ footer i:hover {
     align-items: center;
     gap: 10px;
     padding: 0 40px;
-    color: #9eff00;
+    color: #fff;
     font-weight: 600;
 }
 
