--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,6 +333,21 @@ h1, h2, h3, h4, h5, h6 {
     border-top: 5px dashed rgba(255,255,255,0.1); /* Efek garis film atas */
     border-bottom: 5px dashed rgba(255,255,255,0.1); /* Efek garis film bawah */
 }
+.film-strip-container::before, 
+.film-strip-container::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 20px;
+    /* Bikin lubang kotak-kotak film */
+    background-image: radial-gradient(circle, #222 40%, transparent 45%);
+    background-size: 40px 20px;
+    z-index: 5;
+}
+
+.film-strip-container::before { top: 5px; }
+.film-strip-container::after { bottom: 5px; }
 
 /* Jalur Animasi */
 .film-track {
